@@ -4,6 +4,8 @@ require 'builder'
 module ActiveMerchant
   module Shipping
     class Shipwire < Carrier
+      self.retry_safe = true
+      
       URL = 'https://www.shipwire.com/exec/RateServices.php'
       SCHEMA_URL = 'http://www.shipwire.com/exec/download/RateRequest.dtd'      
       WAREHOUSES = { 'CHI' => 'Chicago',
